--- a/Code_1.ipynb
+++ b/Code_1.ipynb
@@ -9,8 +9,7 @@
    "source": [
     "# Graph Neural Networks to Predict Protein Isoelectric Points\n",
     "\n",
-    "### This notebook will become available on github as soon as my preprint [1] is available online, here: <a href=\"\n",
-    "https://chemrxiv.org/engage/chemrxiv/article-details/6399e788ff4651008f2a4e2b\">TB 2022</a>. \n",
+    "### This notebook will become available on github as soon as my preprint [1] is available online, here: <a href="https://chemrxiv.org/engage/chemrxiv/article-details/6399e788ff4651008f2a4e2b">TB 2022</a>. \n",
     "### This notebook presents the code used to train graph neural networks on prediction of protein isoelectric points, using experimental datasets curated and made available within the public domain by L. P. Kozlowski <a href=\"www.ipc2-isoelectric-point.org\">(see IPC 2) [2]</a>. As Spektral [3] is used in conjunction with Tensorflow and Keras, we need to import those (and several other) libraries; this notebook is Google Colab–ready, i.e., I provide commands such as the next cell to enable working on Colab. The files provided must obviously be uploaded to the content (root) directory, though.\n",
     "\n"
    ]
