--- a/Code_1.ipynb
+++ b/Code_1.ipynb
@@ -507,7 +507,7 @@
     "id": "19b2524c-be10-4ff5-b3dd-dde1f1527dc2"
    },
    "source": [
-    "### Let's create the 29-feature dataset. I'll be showing only the (smaller) protein dataset; later, I'll show the work on the combined (protein+peptide) dataset. It is trivial to do the work on the separate peptide dataset."
+    "### Let's create the 29-feature dataset, using the combined dataset."
    ]
   },
   {
